// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChannelDetails/> spec clicks mute or unmute button 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  style="max-width: 1316px;"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <h1
          class="euiTitle euiTitle--large"
        >
          -
        </h1>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
        style="padding-bottom: 5px;"
      />
    </div>
  </div>
  <div
    class="euiFlexItem"
  />
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  />
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <button
      class="euiButton euiButton--primary"
      data-test-subj="channel-details-mute-button"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiButtonContent__icon"
          focusable="false"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.316 12h10.368c-.188-.704-.28-1.691-.348-3.037-.07-1.382-.103-1.888-.19-2.612-.028-.236-.06-.462-.096-.68-.31-1.892-1.506-2.923-3.708-3.131a1 1 0 10-1.684 0c-2.202.208-3.397 1.24-3.708 3.13a16.01 16.01 0 00-.096.68c-.087.725-.12 1.23-.19 2.613-.068 1.346-.16 2.333-.348 3.037zm10.843 1H1.84c-.308.353-.737.5-1.341.5a.5.5 0 110-1c.786 0 1.024-.783 1.166-3.587.07-1.407.105-1.926.196-2.681.03-.25.063-.49.102-.724.334-2.041 1.546-3.313 3.556-3.792a2 2 0 013.96 0c2.01.479 3.222 1.75 3.557 3.792a17 17 0 01.102.724c.09.755.125 1.274.196 2.681.14 2.804.379 3.587 1.165 3.587a.5.5 0 110 1c-.604 0-1.033-.147-1.341-.5zM5.5 14h4a2 2 0 11-4 0z"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="euiButton__text"
        >
          Unmute channel
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`<ChannelDetails/> spec renders a specific channel 1`] = `
<div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
    style="max-width: 1316px;"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <h1
            class="euiTitle euiTitle--large"
          >
            -
          </h1>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
          style="padding-bottom: 5px;"
        />
      </div>
    </div>
    <div
      class="euiFlexItem"
    />
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    />
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        class="euiButton euiButton--primary"
        data-test-subj="channel-details-mute-button"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiButtonContent__icon"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.316 12h10.368c-.188-.704-.28-1.691-.348-3.037-.07-1.382-.103-1.888-.19-2.612-.028-.236-.06-.462-.096-.68-.31-1.892-1.506-2.923-3.708-3.131a1 1 0 10-1.684 0c-2.202.208-3.397 1.24-3.708 3.13a16.01 16.01 0 00-.096.68c-.087.725-.12 1.23-.19 2.613-.068 1.346-.16 2.333-.348 3.037zm10.843 1H1.84c-.308.353-.737.5-1.341.5a.5.5 0 110-1c.786 0 1.024-.783 1.166-3.587.07-1.407.105-1.926.196-2.681.03-.25.063-.49.102-.724.334-2.041 1.546-3.313 3.556-3.792a2 2 0 013.96 0c2.01.479 3.222 1.75 3.557 3.792a17 17 0 01.102.724c.09.755.125 1.274.196 2.681.14 2.804.379 3.587 1.165 3.587a.5.5 0 110 1c-.604 0-1.033-.147-1.341-.5zM5.5 14h4a2 2 0 11-4 0z"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="euiButton__text"
          >
            Unmute channel
          </span>
        </span>
      </button>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiPanel euiPanel--paddingMedium"
    style="max-width: 1300px;"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      style="padding: 0px 0px;"
    >
      <div
        class="euiFlexItem"
      >
        <h3
          class="euiTitle euiTitle--small"
        >
          Name and description
        </h3>
      </div>
    </div>
    <hr
      class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
    />
    <div
      style="padding: initial;"
    >
      <div>
        <div
          class="euiSpacer euiSpacer--s"
        />
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          >
            <dl
              class="euiDescriptionList euiDescriptionList--row"
              style="word-break: break-word; white-space: pre-line;"
            >
              <dt
                class="euiDescriptionList__title"
              >
                Channel name
              </dt>
              <dd
                class="euiDescriptionList__description"
              >
                -
              </dd>
            </dl>
          </div>
          <div
            class="euiFlexItem"
          >
            <dl
              class="euiDescriptionList euiDescriptionList--row"
              style="word-break: break-word; white-space: pre-line;"
            >
              <dt
                class="euiDescriptionList__title"
              >
                Description
              </dt>
              <dd
                class="euiDescriptionList__description"
              >
                -
              </dd>
            </dl>
          </div>
          <div
            class="euiFlexItem"
          >
            <dl
              class="euiDescriptionList euiDescriptionList--row"
              style="word-break: break-word; white-space: pre-line;"
            >
              <dt
                class="euiDescriptionList__title"
              >
                Last updated
              </dt>
              <dd
                class="euiDescriptionList__description"
              >
                12/31/69 11:59 pm GMT
              </dd>
            </dl>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--m"
        />
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiPanel euiPanel--paddingMedium"
    style="max-width: 1300px;"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      style="padding: 0px 0px;"
    >
      <div
        class="euiFlexItem"
      >
        <h3
          class="euiTitle euiTitle--small"
        >
          Configurations
        </h3>
      </div>
    </div>
    <hr
      class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
    />
    <div
      style="padding: initial;"
    />
  </div>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiPanel euiPanel--paddingMedium"
    style="max-width: 1300px;"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
      style="padding: 0px 0px;"
    >
      <div
        class="euiFlexItem"
      >
        <h3
          class="euiTitle euiTitle--small"
        >
          Availability
        </h3>
      </div>
    </div>
    <hr
      class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall"
    />
    <div
      style="padding: initial;"
    >
      <div>
        <div
          class="euiSpacer euiSpacer--s"
        />
        <div
          class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
        >
          <div
            class="euiFlexItem"
          >
            <dl
              class="euiDescriptionList euiDescriptionList--row"
              style="word-break: break-word; white-space: pre-line;"
            >
              <dt
                class="euiDescriptionList__title"
              >
                Notification sources
              </dt>
              <dd
                class="euiDescriptionList__description"
              >
                -
              </dd>
            </dl>
          </div>
          <div
            class="euiFlexItem"
          />
          <div
            class="euiFlexItem"
          />
        </div>
        <div
          class="euiSpacer euiSpacer--m"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChannelDetails/> spec renders the component 1`] = `
<div
  class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  style="max-width: 1316px;"
>
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <div
      class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsFlexEnd euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <h1
          class="euiTitle euiTitle--large"
        >
          -
        </h1>
      </div>
      <div
        class="euiFlexItem euiFlexItem--flexGrowZero"
        style="padding-bottom: 5px;"
      />
    </div>
  </div>
  <div
    class="euiFlexItem"
  />
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  />
  <div
    class="euiFlexItem euiFlexItem--flexGrowZero"
  >
    <button
      class="euiButton euiButton--primary"
      data-test-subj="channel-details-mute-button"
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonContent__icon"
          focusable="false"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="euiButton__text"
        >
          Unmute channel
        </span>
      </span>
    </button>
  </div>
</div>
`;
